<resources>
    <string name="app_name">TravelJournal</string>
    <string name="manage_trip">Manage Trip</string>
    <string name="trip_name">Trip name</string>
    <string name="destination">Destination</string>
    <string name="trip_type">Trip type</string>
    <string name="trip_type_option1">City break</string>
    <string name="trip_type_option2">Seaside</string>
    <string name="trip_type_option3">Mountains</string>
    <string name="price_eur_label">Price (EUR)</string>
    <string name="end_date">End date</string>
    <string name="start_date">Start date</string>
    <string name="date_hint">DD/MM/YYYY</string>
    <string name="rating_label">Rating</string>
    <string name="save_label">Save</string>
    <string name="app_title">Travel Journal</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="sign_in">SIGN IN</string>
    <string name="logo">logo</string>
    <string name="missing_text">-</string>
    <string name="trip_pic_content_description">Trip picture</string>
</resources>
